# mfrc522

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md
include/: common.h  mfrc522_conf.h  mfrc522_drv.h  mfrc522_ll.h  mfrc522_picc.h  mfrc522_reg.h  type.h
script/: auto_merge.sh  travis_install_dependencies.sh
src/: CMakeLists.txt  mfrc522_drv.c  mfrc522_ll_stub.c  mfrc522_picc.c
ut/: CMakeLists.txt  Mockable.h  TestCommon.cpp  TestCommon.h  TestMfrc522Drv.cpp  TestMfrc522DrvCommon.cpp  TestMfrc522DrvIrq.cpp  TestMfrc522DrvLlDef.cpp  TestMfrc522DrvLlPtr.cpp  TestMfrc522DrvNoLlDelay.cpp  TestMfrc522DrvPiccActivities.cpp  TestMfrc522DrvTimer.cpp  TestMfrc522Picc.cpp  TestRunner.cpp  TestRunner.h
ut/common/: Mockable.cpp  Mockable.h  TestCommon.cpp
ut/include/: TestRunner.h
ut/include/mock/: Mfrc522MockWrapper.h
ut/mock/: Mfrc522MockWrapper.cpp  MockCommon.cpp
ut/stub/: Mfrc522FakeDev.cpp  Mfrc522FakeDev.h  StubCommon.cpp  StubCommon.h
